# overnight-test-bot

./: .gitignore  LICENSE  README.md  backends.py  bot.md  checker.py  checkers.py  config.example.yaml  config.yaml  config_dryrun.yaml  db.py  justfile  main.py  project_notes.md  proxy_wrapper.py  pyproject.toml  requirements.txt  setup.sh  start.sh  stop.sh  transports.py
bot/: checker.py  config.py  database.py  logger.py  main.py  monitor.py  telegram.py
